刚设置背面效果的布局

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
     <head>            
         <meta charset="UTF-8">
-        <title>网页标题</title>
+        <title>斗地主</title>
     </head>
     <body>
           网页显示内容
