修正背面的相对位置

--- a/最后测试.html
+++ b/最后测试.html
@@ -343,6 +343,7 @@
         transform: rotate(180deg) scaleX(-1);
     }
     </style>
+
 </head>
 <body>
 
@@ -356,11 +357,11 @@
     <!-- <div class="text-element1">10</div> -->
     
     <div class="media2-box">
-        <img src="F:\\github\\dou_di_zhu\\img\\背面2.jpg" 
+        <img src="img/背面2.jpg" 
         class="media-image">
     </div>
     <div class="media3-box">
-        <img src="F:\\github\\dou_di_zhu\\img\\背面2.jpg" 
+        <img src="img/背面2.jpg" 
         class="media-image">
     </div>
 
