只欠自动回合

--- a/text.html
+++ b/text.html
@@ -1,159 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-<!-- 头部区域：包含文档的元信息和样式定义 -->
-<style>
-  /* 媒体容器样式：定义圆角方框的基本属性 */
-  .media-box {
-    width: 100px;          /* 容器宽度 */
-    height: 154px;         /* 容器高度 */
-    border-radius: 20px;   /* 圆角半径（20px表示圆角大小） */
-    position: relative;    /* 设置为相对定位，作为子元素绝对定位的参照 */
-    overflow: hidden;      /* 隐藏超出圆角范围的内容 */
-    box-shadow: 0 4px 8px rgba(0,0,0,0); /* 可选：添加阴影效果 */
-
-    /* 新增/修改的样式 */
-    background-color: white; /* 纯白背景 */
-    border: 1px solid #959595;  /* 可选：添加浅灰色边框 */
-    box-shadow: none;        /* 移除阴影（或保留为透明） */
-    }
-  
-    /* 图片样式：控制图片在容器中的表现 */
-    .media-image {
-    width: auto;           /* 取消强制宽度 */
-    height: auto;          /* 取消强制高度 */
-    max-width: 21%;        /* 限制最大宽度（按需调整百分比） */
-    max-height: 21%;       /* 限制最大高度 */
-    object-fit: contain;   /* 替换cover，保持比例且不裁剪 */
-    display: block;
-
-    /* 新增定位属性 */
-    position: absolute;    /* 启用绝对定位 */
-    top: 32%;              /* 垂直居中起点 */
-    left: 16%;             /* 水平居中起点 */
-    transform: translate(-50%, -50%); /* 精确居中 */
-    }
-    
-    /* 文字说明区域样式 */
-    .caption {
-        position: absolute;   /* 绝对定位（相对于.media-box） */
-        bottom: 100;            /* 定位到底部 */
-        left: 0;              /* 左对齐 */
-        right: 0;             /* 右对齐（相当于宽度100%） */
-        background: rgba(0,0,0,0); /* 半透明黑色背景（透明度0.6） */
-        color: rgb(0, 0, 0);         /* 文字颜色 */
-        padding: 10px;        /* 内边距 */
-        box-sizing: border-box; /* 确保padding不增加元素总宽度 */
-    }
-
-    /* 标题文字样式 */
-    .caption h3 {
-        margin: 0 0 5px 0;    /* 去除默认边距，下边距5px */
-        font-size: 18px;      /* 标题字号 */
-    }
-
-
-
-
-
-
-
-    /* 反转图片样式：控制图片在容器中的表现 */
-    .media-imagef {
-    width: auto;           /* 取消强制宽度 */
-    height: auto;          /* 取消强制高度 */
-    max-width: 21%;        /* 限制最大宽度（按需调整百分比） */
-    max-height: 21%;       /* 限制最大高度 */
-    object-fit: contain;   /* 替换cover，保持比例且不裁剪 */
-    display: block;
-
-    /* 反转新增定位属性 */
-    position: absolute;    /* 启用绝对定位 */
-    top: 61%;              /* 垂直居中起点 */
-    left: 74%;             /* 水平居中起点 */
-    transform: translate(-50%, -50%); /* 精确居中 */
-    }
-    
-    /* 反转文字说明区域样式 */
-    .captionf {
-        position: absolute;   /* 绝对定位（相对于.media-box） */
-        bottom: 0;            /* 定位到底部 */
-        left: 1;              /* 左对齐 */
-        right: 0;             /* 右对齐（相当于宽度100%） */
-        background: rgba(0,0,0,0); /* 半透明黑色背景（透明度0.6） */
-        color: rgb(0, 0, 0);         /* 文字颜色 */
-        padding: 10px;        /* 内边距 */
-        box-sizing: border-box; /* 确保padding不增加元素总宽度 */
-    }
-
-    /* 反转标题文字样式 */
-    .captionf h3 {
-        margin: 0 0 5px 0;    /* 去除默认边距，下边距5px */
-        font-size: 18px;      /* 标题字号 */
-    }
-
-
-
-
-
-
-
-
-
-
-
-    /* 图片颠倒效果 */
-    .upside-down {
-        transform: scaleY(-1); /* 垂直翻转 */
-    }
-    .left-right-flip {
-        transform: scaleX(-1); /* 水平翻转 */
-    }
-    .both-flip {
-        transform: scale(-1); /* 同时翻转 */
-    }
-
-    .caption {
-        position: absolute;
-        color: black;
-        padding: 10px;
-        box-sizing: border-box;
-        transition: all 0.3s; /* 添加过渡效果 */
-    }
-
-    /* 文字颠倒效果 */
-    .text-upside-down {
-        transform: rotate(180deg);
-    }
-    .text-left-right {
-        transform: scaleX(-1);
-    }
-    .text-both-flip {
-        transform: rotate(180deg) scaleX(-1);
-    }
-</style>
-</head>
-
-<!-- 文档主体内容 -->
 <body>
-<!-- 媒体容器：包含图片和文字说明 -->
-<div class="media-box">
-    <img src="F:\\github\\dou_di_zhu\\img\\梅花.jpg" 
-       class="media-image"
-       alt="示例图片">
-    <div class="caption">
-        <h3>K</h3>      <!-- 标题（建议根据重要性使用h1-h6） -->
-    </div>
 
-
-
-    <img src="F:\\github\\dou_di_zhu\\img\\梅花.jpg" 
-        class="media-imagef upside-down"
-        alt="示例图片">
-    <div class="captionf text-upside-down">
-        <h3>K</h3>      <!-- 标题（建议根据重要性使用h1-h6） -->
-    </div>
-</div>
+    <script>
+        var lis = [1, 2, 3]
+        function a(li){
+            console.log(li.splice(1, 1));
+        }
+        a(lis);
+        console.log(lis);
+    </script>
 
 </body>
 </html>
