--- a/最后测试.html
+++ b/最后测试.html
@@ -21,6 +21,7 @@
         class="media-image">
     </div>
 
+    <div class="media2-cp-box"></div>
 
     <script src="jic.js"></script>
     <script src="doudz.js"></script>
